--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
@@ -51,7 +52,7 @@
         <section class="restaurants">
             <h2 class="restaurants__title">Restaurants</h2>
             <div class="restaurants__cards">
-                <a href="./menu_la palette.html">
+                <a href="./menu_la_palette.html">
                     <article class="card">
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de la plats">
                         <div class="card__content">
@@ -68,7 +69,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="#">
+                <a href="./menu_la_note.html">
                     <article class="card">
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de la plats">
                         <div class="card__content">
@@ -85,7 +86,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="#">
+                <a href="./menu_française.html">
                     <article class="card">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de la plats">
                         <div class="card__content">
@@ -102,7 +103,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="#">
+                <a href="./menu_délice.html">
                     <article class="card">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de la plats">
                         <div class="card__content">
