--- a/menu_délice.html
+++ b/menu_délice.html
@@ -54,7 +54,7 @@
             </div>
         </section>
         <section class="menu">
-            <h3>PLATS</h3>
+            <h3 class="menu__btns">PLATS</h3>
             <div class="menu__btns">
                 <button>
                     Coquilles Saint-Jacques <br>Accompagnées d'une purée de panais
@@ -72,7 +72,7 @@
 
         </section>
         <section class="menu">
-            <h3>DESSERTS</h3>
+            <h3 class="menu__title">DESSERTS</h3>
             <div class="menu__btns">
                 <button>
                     Pétales de violettes glacés<br>Et purée de noisettes
