--- a/menu_la_note.html
+++ b/menu_la_note.html
@@ -54,7 +54,7 @@
             </div>
         </section>
         <section class="menu">
-            <h3>PLATS</h3>
+            <h3 class="menu__title">PLATS</h3>
             <div class="menu__btns">
                 <button>
                     Poulet rôti aux herbes de Provence <br>Et sa crème de truffe
@@ -73,7 +73,7 @@ Et ses légumes de saison
 
         </section>
         <section class="menu">
-            <h3>DESSERTS</h3>
+            <h3 class="menu__title">DESSERTS</h3>
             <div class="menu__btns">
                 <button>
                     Farandole de desserts<br>Du chef
