--- a/menu_la_palette.html
+++ b/menu_la_palette.html
@@ -39,7 +39,8 @@
             <h3 class="menu__title">ENTRÉES</h3>
             <div class="menu__btns">
                 <button>
-                    Fricassée d'escargots<br>Au piment d'Espelette
+                    Fricassée d'escargots<br>
+                    Au piment d'Espelette
                     <span>25€</span>
                 </button>
                 <button>
@@ -53,7 +54,7 @@
             </div>
         </section>
         <section class="menu">
-            <h3>PLATS</h3>
+            <h3 class="menu__title">PLATS</h3>
             <div class="menu__btns">
                 <button>
                     Filet de bœuf aux herbes<br>Accompagné de sa ribambelle de légumes
@@ -71,7 +72,7 @@
 
         </section>
         <section class="menu">
-            <h3>DESSERTS</h3>
+            <h3 class="menu__title">DESSERTS</h3>
             <div class="menu__btns">
                 <button>
                     Paris-Brest<br>Revisité
