--- a/menu_française.html
+++ b/menu_française.html
@@ -59,7 +59,7 @@
             </div>
         </section>
         <section class="menu">
-            <h3>PLATS</h3>
+            <h3 class="menu__title">PLATS</h3>
             <div class="menu__btns">
                 <button>
                     Noix de coquilles Saint-Jacques <br>Sur lit de purée de céleri-rave
@@ -77,7 +77,7 @@
 
         </section>
         <section class="menu">
-            <h3>DESSERTS</h3>
+            <h3 class="menu__title">DESSERTS</h3>
             <div class="menu__btns">
                 <button>
                     Macaron noisette et chocolat<br>Glace au caramel brun et sel de Guérande
