--- a/menu_la_note.html
+++ b/menu_la_note.html
@@ -24,7 +24,7 @@
         <img class="header__logo" src="./images/logo/ohmyfood.png" alt="ohmyfood">
     </header>
     <main class="main">
-        <section class="hero">
+        <section class="hero__main">
             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de la plats">
         </section>
         <section class="title">
@@ -37,56 +37,83 @@
         </section>
 
         <section class="menu">
-            <h3 class="menu__title">ENTRÉES</h3>
+            <h2 class="menu__title">ENTRÉES</h2>
             <div class="menu__btns">
-                <button>
-                    Tartare de thon<br>Assaisonné au yuzu
+                <article>
+                    <div>
+                        <h3>Tartare de thon</h3>
+                        <p> Assaisonné au yuzu</p>
+                    </div>
                     <span>25€</span>
-                </button>
-                <button>
-                    Bouchée de homard croustillant <br>Et sa farandole de petits légumes
+                </article>
+                <article>
+                    <div>
+                        <h3>Bouchée de homard croustillant </h3>
+                        <p>Et sa farandole de petits légumes</p>
+                    </div>
                     <span>35€</span>
-                </button>
-                <button>
-                    Velouté de cèpes <br>Aux truffes
+                </article>
+                <article>
+                    <div>
+                        <h3>Velouté de cèpes </h3>
+                        <p>Aux truffes</p>
+                    </div>
                     <span>20€</span>
-                </button>
+                </article>
             </div>
         </section>
         <section class="menu">
-            <h3 class="menu__title">PLATS</h3>
+            <h2 class="menu__title">PLATS</h2>
             <div class="menu__btns">
-                <button>
-                    Poulet rôti aux herbes de Provence <br>Et sa crème de truffe
+                <article>
+                    <div>
+                        <h3>Poulet rôti aux herbes de Provence </h3>
+                        <p>Et sa crème de truffe</p>
+
+                    </div>
                     <span>40€</span>
-                </button>
-                <button>
-                    Langouste rôtie<br>
-Et ses légumes de saison
+                </article>
+                <article>
+                    <div>
+                        <h3>Langouste rôti </h3>
+                        <p>Et ses légumes de saison</p>
+                    </div>
                     <span>35€</span>
-                </button>
-                <button>
-                    Côte de bœuf Angus<br>Et sa purée de panais
+                </article>
+                <article>
+                    <div>
+                        <h3>Côte de bœuf Angu </h3>
+                        <p>Et sa purée de panais</p>
+                    </div>
                     <span>44€</span>
-                </button>
+                </article>
             </div>
 
         </section>
         <section class="menu">
-            <h3 class="menu__title">DESSERTS</h3>
+            <h2 class="menu__title">DESSERTS</h2>
             <div class="menu__btns">
-                <button>
-                    Farandole de desserts<br>Du chef
+                <article>
+                    <div>
+                        <h3>Farandole de dessert </h3>
+                        <p>Du chef</p>
+                    </div>
                     <span>18€</span>
-                </button>
-                <button>
-                    Crème brulée <br>Revisitée
+                </article>
+                <article>
+                    <div>
+                        <h3>Crème brulée </h3>
+                        <p> Revisitée</p>
+                    </div>
                     <span>22€</span>
-                </button>
-                <button>
-                    Tiramisu<br>À la noisette
+                </article>
+                <article>
+                    <div>
+                        <h3>Tiramisu</h3>
+                        <p>À la noisette</p>
+                    </div>
                     <span>23€</span>
-                </button>
+                </article>
             </div>
         </section>
         <div class="menu_btn">
