--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button class="hero__explorer btn_commande">Explorer nos restaurants</button>
         </section>
         <section class="fonctionnement">
-            <h2>Fonctionnement</h2>
+            <h2 class="fonctionnement__title">Fonctionnement</h2>
             <div class="fonctionnement__btns">
                 <button>
                     <span>1</span>
