--- a/menu_délice.html
+++ b/menu_délice.html
@@ -24,7 +24,7 @@
         <img class="header__logo" src="./images/logo/ohmyfood.png" alt="ohmyfood">
     </header>
     <main class="main">
-        <section class="hero">
+        <section class="hero__main">
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de la plats">
         </section>
         <section class="title">
@@ -37,55 +37,84 @@
         </section>
 
         <section class="menu">
-            <h3 class="menu__title">ENTRÉES</h3>
+            <h2 class="menu__title">ENTRÉES</h2>
             <div class="menu__btns">
-                <button>
-                    Tartare de poulpe acidulé<br>Aux zestes d'orange
+                <article>
+                    <div>
+                        <h3>Tartare de poulpe acidulé</h3>
+                        <p>Aux zestes d'orange</p>
+                    </div>
                     <span>25€</span>
-                </button>
-                <button>
-                    Velouté de légumes d'antan <br>Carotte, panais, topinambour
+                </article>
+                <article>
+                    <div>
+                        <h3>Velouté de légumes d'antan </h3>
+                        <p>Carotte, panais, topinambour</p>
+                    </div>
                     <span>35€</span>
-                </button>
-                <button>
-                    Soupe à l'oignon <br>Revisitée
+                </article>
+                <article>
+                    <div>
+                        <h3>Soupe à l'oignon </h3>
+                        <p>Revisitée</p>
+                    </div>
                     <span>20€</span>
-                </button>
+                </article>
             </div>
         </section>
         <section class="menu">
-            <h3 class="menu__btns">PLATS</h3>
+            <h2 class="menu__btns">PLATS</h2>
             <div class="menu__btns">
-                <button>
-                    Coquilles Saint-Jacques <br>Accompagnées d'une purée de panais
+                <article>
+                    <div>
+                        <h3> Coquilles Saint-Jacques </h3>
+                        <p> Accompagnées d'une purée de panais</p>
+                    </div>
                     <span>40€</span>
-                </button>
-                <button>
-                    Magret de canard<br>Et parmentier de pommes de terre
+                </article>
+                <article>
+                    <div>
+                        <h3> Magret de canard</h3>
+                        <p> Et parmentier de pommes de terre</p>
+                    </div>
                     <span>35€</span>
-                </button>
-                <button>
-                    Pigeonneau d’Ille-et-Vilaine<br>Sur son lit de gnocchis aux légumes
+                </article>
+                <article>
+                    <div>
+                        <h3> Pigeonneau d’Ille-et-Vilaine</h3>
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                    </div>
                     <span>44€</span>
-                </button>
+                </article>
             </div>
 
         </section>
         <section class="menu">
-            <h3 class="menu__title">DESSERTS</h3>
+            <h2 class="menu__title">DESSERTS</h2>
             <div class="menu__btns">
-                <button>
-                    Pétales de violettes glacés<br>Et purée de noisettes
+                <article>
+                    <div>
+                        <h3>
+                            Pétales de violettes glacés
+                        </h3>
+                        <p> Et purée de noisettes</p>
+                    </div>
                     <span>18€</span>
-                </button>
-                <button>
-                    Fondant au chocolat<br>Revisitée
+                </article>
+                <article>
+                    <div>
+                        <h3>Fondant au chocolat</h3>
+                        <p>Revisitée</p>
+                    </div>
                     <span>22€</span>
-                </button>
-                <button>
-                    Millefeuille croustillant<br>Myrtilles et pâte d’amande
+                </article>
+                <article>
+                    <div>
+                        <h3> Millefeuille croustillant</h3>
+                        <p>Myrtilles et pâte d’amande</p>
+                    </div>
                     <span>23€</span>
-                </button>
+                </article>
             </div>
         </section>
         <div class="menu_btn">
