--- a/menu_française.html
+++ b/menu_française.html
@@ -24,7 +24,7 @@
         <img class="header__logo" src="./images/logo/ohmyfood.png" alt="ohmyfood">
     </header>
     <main class="main">
-        <section class="hero">
+        <section class="hero__main">
             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de la plats">
         </section>
         <section class="title">
@@ -37,60 +37,90 @@
         </section>
 
         <section class="menu">
-            <h3 class="menu__title">ENTRÉES</h3>
+            <h2 class="menu__title">ENTRÉES</h2>
             <div class="menu__btns">
-                <button>
-                    Ravioles de foie gras<br>Accompagnées de leur crème à la truffe
+                <article>
+                    <div>
+                        <h3>Ravioles de foie gras</h3>
+                        <p>Accompagnées de leur crème à la truffe</p>
+                    </div>
                     <span>25€</span>
-                </button>
-                <button>
-                    Caviar osciètre <br>Sur blini à la farine de blé noir
+                </article>
+                <article>
+                    <div>
+                        <h3>Caviar osciètre </h3>
+                        <p>Sur blini à la farine de blé noir</p>
+                    </div>
 
                     <span>35€</span>
-                </button>
-                <button>
-                    Homard et espuma de potiron <br>Aux truffes
+                </article>
+                <article>
+                    <div>
+                        <h3> Homard et espuma de potiron </h3>
+                        <p>Aux truffes</p>
+                    </div>
                     <span>20€</span>
-                </button>
-                <button>
-                    Foie gras de canard cuit entier <br>Confiture de figue et pain toasté
+                </article>
+                <article>
+                    <div>
+                        <h3> Foie gras de canard cuit entier</h3>
+                        <p>Confiture de figue et pain toasté</p>
+                    </div>
                     <span>35€</span>
-                </button>
+                </article>
             </div>
         </section>
         <section class="menu">
-            <h3 class="menu__title">PLATS</h3>
+            <h2 class="menu__title">PLATS</h2>
             <div class="menu__btns">
-                <button>
-                    Noix de coquilles Saint-Jacques <br>Sur lit de purée de céleri-rave
+                <article>
+                    <div>
+                        <h3> Noix de coquilles Saint-Jacques </h3>
+                        <p>Sur lit de purée de céleri-rave</p>
+                    </div>
                     <span>40€</span>
-                </button>
-                <button>
-                    Langoustine poêlée<br>Purée de patate douce
+                </article>
+                <article>
+                    <div>
+                        <h3>Langoustine poêlée</h3>
+                        <p>Purée de patate douce</p>
+                    </div>
                     <span>35€</span>
-                </button>
-                <button>
-                    Mijoté de queue de bœuf<br>Et riz sauvage aux zestes de citron
+                </article>
+                <article>
+                    <div>
+                        <h3>Mijoté de queue de bœuf</h3>
+                        <p> Et riz sauvage aux zestes de citron</p>
+                    </div>
                     <span>44€</span>
-                </button>
+                </article>
             </div>
 
         </section>
         <section class="menu">
-            <h3 class="menu__title">DESSERTS</h3>
+            <h2 class="menu__title">DESSERTS</h2>
             <div class="menu__btns">
-                <button>
-                    Macaron noisette et chocolat<br>Glace au caramel brun et sel de Guérande
+                <article>
+                    <div>
+                        <h3>Macaron noisette et chocolat</h3>
+                        <p>Glace au caramel brun et sel de Guérande</p>
+                    </div>
                     <span>18€</span>
-                </button>
-                <button>
-                    Baba au rhum revisité <br>Avec son coulis de citron
+                </article>
+                <article>
+                    <div>
+                        <h3>Baba au rhum revisité </h3>
+                        <p>Avec son coulis de citron</p>
+                    </div>
                     <span>22€</span>
-                </button>
-                <button>
-                    Tarte au citron meringuée<br>Déstructurée
+                </article>
+                <article>
+                    <div>
+                        <h3>Tarte au citron meringuée</h3>
+                        <p>Déstructurée</p>
+                    </div>
                     <span>23€</span>
-                </button>
+                </article>
             </div>
         </section>
         <div class="menu_btn">
