--- a/menu_la_palette.html
+++ b/menu_la_palette.html
@@ -24,7 +24,7 @@
         <img class="header__logo" src="./images/logo/ohmyfood.png" alt="ohmyfood">
     </header>
     <main class="main">
-        <section class="hero">
+        <section class="hero__main">
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de la plats">
         </section>
         <section class="title">
@@ -36,56 +36,83 @@
         </section>
 
         <section class="menu">
-            <h3 class="menu__title">ENTRÉES</h3>
+            <h2 class="menu__title">ENTRÉES</h2>
             <div class="menu__btns">
-                <button>
-                    Fricassée d'escargots<br>
-                    Au piment d'Espelette
-                    <span>25€</span>
-                </button>
-                <button>
-                    Foie gras de canard mi-cuit<br>Et ses copeaux de truffe noire
+                <article class="card">
+                    <div class="card__title">
+                        <h3>Fricassée d'escargots</h3>
+                        <p>Au piment d'Espelette</p>
+                    </div>
+                    <span class="card__price">25€</span>
+                    <span class="card__checked">ok</span>
+                </article>
+                <article class="card">
+                    <div>
+                        <h3>Foie gras de canard mi-cuit </h3>
+                        <p>Et ses copeaux de truffe noire</p>
+                    </div>
                     <span>35€</span>
-                </button>
-                <button>
-                    Œuf au plat<br>Assaisonné à la truffe sur lit de caviar
+                </article>
+                <article class="card">
+                    <div>
+                        <h3>Œuf au plat</h3>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                    </div>
                     <span>20€</span>
-                </button>
+                </article>
             </div>
         </section>
         <section class="menu">
-            <h3 class="menu__title">PLATS</h3>
+            <h2 class="menu__title">PLATS</h2>
             <div class="menu__btns">
-                <button>
-                    Filet de bœuf aux herbes<br>Accompagné de sa ribambelle de légumes
+                <article class="card">
+                    <div>
+                        <h3>Filet de bœuf aux herbes</h3>
+                        <p>Accompagné de sa ribambelle de légumes</p>
+                    </div>
                     <span>40€</span>
-                </button>
-                <button>
-                    Parmentier de queue de bœuf<br>À la truffe noire sur sa purée de panais
+                </article>
+                <article class="card">
+                    <div>
+                        <h3>Parmentier de queue de bœuf </h3>
+                        <p>À la truffe noire sur sa purée de panais</p>
+                    </div>
                     <span>35€</span>
-                </button>
-                <button>
-                    Filet de turbot<br>Aux agrumes
+                </article>
+                <article class="card">
+                    <div>
+                        <h3>Filet de turbot</h3>
+                        <p>Aux agrumes</p>
+                    </div>
                     <span>44€</span>
-                </button>
+                </article>
             </div>
 
         </section>
         <section class="menu">
-            <h3 class="menu__title">DESSERTS</h3>
+            <h2 class="menu__title">DESSERTS</h2>
             <div class="menu__btns">
-                <button>
-                    Paris-Brest<br>Revisité
+                <article class="card">
+                    <div>
+                        <h3>Paris-Brest </h3>
+                        <p>Revisité</p>
+                    </div>
                     <span>18€</span>
-                </button>
-                <button>
-                    Macaron au chocolat d'exception <br>Et glace à la vanille de Madagascar
+                </article>
+                <article class="card">
+                    <div>
+                        <h3>Macaron au chocolat d'exception</h3>
+                        <p> Et glace à la vanille de Madagascar</p>
+                    </div>
                     <span>22€</span>
-                </button>
-                <button>
-                    Mousse au chocolat <br>Au piment d'Espelette et à la truffe noire
+                </article>
+                <article class="card">
+                    <div>
+                        <h3>Mousse au chocolat </h3>
+                        <p> Au piment d'Espelette et à la truffe noire</p>
+                    </div>
                     <span>23€</span>
-                </button>
+                </article>
             </div>
         </section>
         <div class="menu_btn">
