--- a/index.html
+++ b/index.html
@@ -6,138 +6,148 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./asset/index.css">
     <title>ohmyfood</title>
 </head>
 
 <body>
-    <header class="header">
-        <img class="header_logo" src="./images/logo/ohmyfood.png" alt="ohmyfood">
-        <form>
-            <span><i class="fa fa-location-dot"></i></span>
-            <input type="text" placeholder="Paris, Belleville">
-
-        </form>
-    </header>
-    <main>
-        <section class="hero">
-            <h1>Réservez le menu qui vous convient</h1>
-            <p>Découvrez des restaurants d'exeption, sélectionés par nos soin.</p>
-            <button class="hero__explorer btn_commande">Explorer nos restaurants</button>
-        </section>
-        <section class="fonctionnement">
-            <h2 class="fonctionnement__title">Fonctionnement</h2>
-            <div class="fonctionnement__btns">
-                <button>
-                    <span>1</span>
-                    <i class="fa-solid fa-mobile-screen-button"></i>
-                    Choisissez un restaurant
-                </button>
-                <button>
-                    <span>2</span>
-                <i class="fa-solid fa-list-ul"></i>
-                    Composez votre menu
-                </button> 
-                <button>
-                    <span>3</span>
-                <i class="fa-solid fa-store"></i>
-                    Déguestez au restaurant
-                </button>
+    <div class="content__loader">
+        <header class="header">
+            <img class="header_logo" src="./images/logo/ohmyfood.png" alt="ohmyfood">
+            <div class="loader">
+                <p>Chargement...</p>
+                <div class="loader-bar"></div>
             </div>
-        </section>
-        <section class="restaurants">
-            <h2 class="restaurants__title">Restaurants</h2>
-            <div class="restaurants__cards">
-                <a href="./menu_la_palette.html">
-                    <article class="card">
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de la plats">
-                        <div class="card__content">
-                            <div class="card__txt">
-                                <h3 class="card__title">La palette du goût</h3>
-                                <p class="card__subtitle">Ménilmontant</p>
-                            </div>
-                            <div class="heart-container">
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-solid fa-heart"></i>
+            <form>
 
-                            </div>
+                <span><i class="fa fa-location-dot"></i></span>
+                <input type="text" placeholder="Paris, Belleville">
+
+            </form>
+        </header>
+        <main>
+
+            <section class="hero">
+                <h1>Réservez le menu qui vous convient</h1>
+                <p>Découvrez des restaurants d'exeption, sélectionés par nos soin.</p>
+                <button class="hero__explorer btn_commande">Explorer nos restaurants</button>
+            </section>
+
+            <section class="fonctionnement">
+                <h2 class="fonctionnement__title">Fonctionnement</h2>
+                <div class="fonctionnement__btns">
+                    <button>
+                        <span>1</span>
+                        <i class="fa-solid fa-mobile-screen-button"></i>
+                        Choisissez un restaurant
+                    </button>
+                    <button>
+                        <span>2</span>
+                        <i class="fa-solid fa-list-ul"></i>
+                        Composez votre menu
+                    </button>
+                    <button>
+                        <span>3</span>
+                        <i class="fa-solid fa-store"></i>
+                        Déguestez au restaurant
+                    </button>
+                </div>
+   
+    </section>
+    <section class="restaurants">
+        <h2 class="restaurants__title">Restaurants</h2>
+        <div class="restaurants__cards">
+            <a href="./html/menu_la_palette.html">
+                <article class="card">
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de la plats">
+                    <div class="card__content">
+                        <div class="card__txt">
+                            <h3 class="card__title">La palette du goût</h3>
+                            <p class="card__subtitle">Ménilmontant</p>
+                        </div>
+                        <div class="heart-container">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
 
                         </div>
-                    </article>
-                </a>
-                <a href="./menu_la_note.html">
-                    <article class="card">
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de la plats">
-                        <div class="card__content">
-                            <div class="card__txt">
-                                <h3 class="card__title">La note enchantée</h3>
-                                <p class="card__subtitle">Charonne</p>
-                            </div>
-                            <div class="heart-container">
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-solid fa-heart"></i>
 
-                            </div>
+                    </div>
+                </article>
+            </a>
+            <a href="./html/menu_la_note.html">
+                <article class="card">
+                    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de la plats">
+                    <div class="card__content">
+                        <div class="card__txt">
+                            <h3 class="card__title">La note enchantée</h3>
+                            <p class="card__subtitle">Charonne</p>
+                        </div>
+                        <div class="heart-container">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
 
                         </div>
-                    </article>
-                </a>
-                <a href="./menu_française.html">
-                    <article class="card">
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de la plats">
-                        <div class="card__content">
-                            <div class="card__txt">
-                                <h3 class="card__title">À la française</h3>
-                                <p class="card__subtitle">Cité Rouge</p>
-                            </div>
-                            <div class="heart-container">
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-solid fa-heart"></i>
 
-                            </div>
+                    </div>
+                </article>
+            </a>
+            <a href="./html/menu_française.html">
+                <article class="card">
+                    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de la plats">
+                    <div class="card__content">
+                        <div class="card__txt">
+                            <h3 class="card__title">À la française</h3>
+                            <p class="card__subtitle">Cité Rouge</p>
+                        </div>
+                        <div class="heart-container">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
 
                         </div>
-                    </article>
-                </a>
-                <a href="./menu_délice.html">
-                    <article class="card">
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de la plats">
-                        <div class="card__content">
-                            <div class="card__txt">
-                                <h3 class="card__title">La délice des sens</h3>
-                                <p class="card__subtitle">Folie-Méricourt</p>
-                            </div>
-                            <div class="heart-container">
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-solid fa-heart"></i>
 
-                            </div>
+                    </div>
+                </article>
+            </a>
+            <a href="./html/menu_délice.html">
+                <article class="card">
+                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        alt="Image de la plats">
+                    <div class="card__content">
+                        <div class="card__txt">
+                            <h3 class="card__title">La délice des sens</h3>
+                            <p class="card__subtitle">Folie-Méricourt</p>
+                        </div>
+                        <div class="heart-container">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
 
                         </div>
-                    </article>
-                </a>
-            </div>
 
-        </section>
-    </main>
-    <footer>
-        <div class="footer">
-            <h4 class="shrikhand">
-                ohmyfood
-            </h4>
-            <ul class="footer__ul">
-                <li class="footer__li"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-                <li><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li>
-                <li><a href="#">Mentions légales</a></li>
-                <li><a href="mailto:contct@ohmyfood.com">Contact</a></li>
-            </ul>
+                    </div>
+                </article>
+            </a>
         </div>
-    </footer>
 
+    </section>
+    </main>
+    <footer class="footer">
+        <h4 class="shrikhand">
+            ohmyfood
+        </h4>
+        <ul class="footer__ul">
+            <li class="footer__li"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+            <li class="footer__li"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li>
+            <li class="footer__li"><a href="#">Mentions légales</a></li>
+            <li class="footer__li"><a href="mailto:contct@ohmyfood.com">Contact</a></li>
+        </ul>
+    </footer>
+    </div>
 </body>
 
 </html>
