--- a/html/menu_française.html
+++ b/html/menu_française.html
@@ -36,129 +36,129 @@
                     <i class="fa-solid fa-heart"></i>
                 </div>
             </section>
-            <div class="block-1">
-
-                <section class="menu">
 
 
-                    <div class="menu__text">
-                        <h2>ENTRÉES</h2>
-                        <p class="menu__underline"></p>
-                    </div>
-
-                    <div class="menu__btns">
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Ravioles de foie gras</h3>
-                                <p>Accompagnées de leur crème à la truffe</p>
-                            </div>
-                            <span class="card__price">25€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Caviar osciètre </h3>
-                                <p>Sur blini à la farine de blé noir</p>
-                            </div>
-
-                            <span class="card__price">35€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3> Homard et espuma de potiron </h3>
-                                <p>Aux truffes</p>
-                            </div>
-                            <span class="card__price">20€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3> Foie gras de canard cuit entier</h3>
-                                <p>Confiture de figue et pain toasté</p>
-                            </div>
-                            <span class="card__price">35€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                    </div>
-                </section>
-            </div>
-            <div class="block-2">
-                <section class="menu">
+            <section class="menu block-1">
 
 
-                    <div class="menu__text">
-                        <h2>PLATS</h2>
-                        <p class="menu__underline"></p>
-                    </div>
+                <div class="menu__text">
+                    <h2>ENTRÉES</h2>
+                    <p class="menu__underline"></p>
+                </div>
 
-                    <div class="menu__btns">
-                        <article class="card">
-                            <div class="card__title">
-                                <h3> Noix de coquilles Saint-Jacques </h3>
-                                <p>Sur lit de purée de céleri-rave</p>
-                            </div>
-                            <span class="card__price">40€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Langoustine poêlée</h3>
-                                <p>Purée de patate douce</p>
-                            </div>
-                            <span class="card__price">35€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Mijoté de queue de bœuf</h3>
-                                <p> Et riz sauvage aux zestes de citron</p>
-                            </div>
-                            <span class="card__price">44€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                    </div>
+                <div class="menu__btns">
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Ravioles de foie gras</h3>
+                            <p>Accompagnées de leur crème à la truffe</p>
+                        </div>
+                        <span class="card__price">25€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Caviar osciètre </h3>
+                            <p>Sur blini à la farine de blé noir</p>
+                        </div>
 
-                </section>
-            </div>
-            <div class="block-3">
-                <section class="menu">
+                        <span class="card__price">35€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3> Homard et espuma de potiron </h3>
+                            <p>Aux truffes</p>
+                        </div>
+                        <span class="card__price">20€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3> Foie gras de canard cuit entier</h3>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <span class="card__price">35€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                </div>
+            </section>
+
+
+            <section class="menu block-2">
+
+
+                <div class="menu__text">
+                    <h2>PLATS</h2>
+                    <p class="menu__underline"></p>
+                </div>
+
+                <div class="menu__btns">
+                    <article class="card">
+                        <div class="card__title">
+                            <h3> Noix de coquilles Saint-Jacques </h3>
+                            <p>Sur lit de purée de céleri-rave</p>
+                        </div>
+                        <span class="card__price">40€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Langoustine poêlée</h3>
+                            <p>Purée de patate douce</p>
+                        </div>
+                        <span class="card__price">35€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Mijoté de queue de bœuf</h3>
+                            <p> Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <span class="card__price">44€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                </div>
+
+            </section>
+
+
+            <section class="menu block-3">
 
 
 
-                    <div class="menu__text">
-                        <h2>DESSERTS</h2>
-                        <p class="menu__underline"></p>
-                    </div>
+                <div class="menu__text">
+                    <h2>DESSERTS</h2>
+                    <p class="menu__underline"></p>
+                </div>
 
-                    <div class="menu__btns">
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Macaron noisette et chocolat</h3>
-                                <p>Glace au caramel brun et sel de Guérande</p>
-                            </div>
-                            <span class="card__price">18€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Baba au rhum revisité </h3>
-                                <p>Avec son coulis de citron</p>
-                            </div>
-                            <span class="card__price">22€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Tarte au citron meringuée</h3>
-                                <p>Déstructurée</p>
-                            </div>
-                            <span class="card__price">23€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                    </div>
-                </section>
-            </div>
+                <div class="menu__btns">
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Macaron noisette et chocolat</h3>
+                            <p>Glace au caramel brun et sel de Guérande</p>
+                        </div>
+                        <span class="card__price">18€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Baba au rhum revisité </h3>
+                            <p>Avec son coulis de citron</p>
+                        </div>
+                        <span class="card__price">22€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Tarte au citron meringuée</h3>
+                            <p>Déstructurée</p>
+                        </div>
+                        <span class="card__price">23€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                </div>
+            </section>
+
             <div class="menu_btn">
                 <button class="btn_commande">Commander</button>
             </div>
