--- a/html/menu_la_palette.html
+++ b/html/menu_la_palette.html
@@ -36,113 +36,113 @@
                     <i class="fa-solid fa-heart"></i>
                 </div>
             </section>
-            <div class="block-1">
 
-                <section class="menu">
 
-                    <div class="menu__text">
-                        <h2>ENTRÉES</h2>
-                        <p class="menu__underline"></p>
-                    </div>
-                    <div class="menu__btns">
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Fricassée d'escargots</h3>
-                                <p>Au piment d'Espelette</p>
-                            </div>
-                            <span class="card__price">25€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Foie gras de canard mi-cuit </h3>
-                                <p>Et ses copeaux de truffe noire</p>
-                            </div>
-                            <span class="card__price">35€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Œuf au plat</h3>
-                                <p>Assaisonné à la truffe sur lit de caviar</p>
-                            </div>
-                            <span class="card__price">20€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                    </div>
-                </section>
-            </div>
-            <div class="block-2">
-                <section class="menu">
+            <section class="menu block-1">
 
-                    <div class="menu__text">
-                        <h2>PLATS</h2>
-                        <p class="menu__underline"></p>
-                    </div>
-                    <div class="menu__btns">
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Filet de bœuf aux herbes</h3>
-                                <p>Accompagné de sa ribambelle de légumes</p>
-                            </div>
-                            <span class="card__price">40€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Parmentier de queue de bœuf </h3>
-                                <p>À la truffe noire sur sa purée de panais</p>
-                            </div>
-                            <span class="card__price">35€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Filet de turbot</h3>
-                                <p>Aux agrumes</p>
-                            </div>
-                            <span class="card__price">44€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                    </div>
+                <div class="menu__text">
+                    <h2>ENTRÉES</h2>
+                    <p class="menu__underline"></p>
+                </div>
+                <div class="menu__btns">
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Fricassée d'escargots</h3>
+                            <p>Au piment d'Espelette</p>
+                        </div>
+                        <span class="card__price">25€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Foie gras de canard mi-cuit </h3>
+                            <p>Et ses copeaux de truffe noire</p>
+                        </div>
+                        <span class="card__price">35€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Œuf au plat</h3>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                        </div>
+                        <span class="card__price">20€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                </div>
+            </section>
 
-                </section>
-            </div>
-            <div class="block-3">
-                <section class="menu">
 
-                    <div class="menu__text">
-                        <h2>DESSERTS</h2>
-                        <p class="menu__underline"></p>
-                    </div>
-                    <div class="menu__btns">
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Paris-Brest </h3>
-                                <p>Revisité</p>
-                            </div>
-                            <span class="card__price">18€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Macaron au chocolat d'exception</h3>
-                                <p> Et glace à la vanille de Madagascar</p>
-                            </div>
-                            <span class="card__price">22€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                        <article class="card">
-                            <div class="card__title">
-                                <h3>Mousse au chocolat </h3>
-                                <p> Au piment d'Espelette et à la truffe noire</p>
-                            </div>
-                            <span class="card__price">23€</span>
-                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                        </article>
-                    </div>
-                </section>
-            </div>
+            <section class="menu block-2">
+
+                <div class="menu__text">
+                    <h2>PLATS</h2>
+                    <p class="menu__underline"></p>
+                </div>
+                <div class="menu__btns">
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Filet de bœuf aux herbes</h3>
+                            <p>Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        <span class="card__price">40€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Parmentier de queue de bœuf </h3>
+                            <p>À la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <span class="card__price">35€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Filet de turbot</h3>
+                            <p>Aux agrumes</p>
+                        </div>
+                        <span class="card__price">44€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                </div>
+
+            </section>
+
+
+            <section class="menu block-3">
+
+                <div class="menu__text">
+                    <h2>DESSERTS</h2>
+                    <p class="menu__underline"></p>
+                </div>
+                <div class="menu__btns">
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Paris-Brest </h3>
+                            <p>Revisité</p>
+                        </div>
+                        <span class="card__price">18€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Macaron au chocolat d'exception</h3>
+                            <p> Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <span class="card__price">22€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                    <article class="card">
+                        <div class="card__title">
+                            <h3>Mousse au chocolat </h3>
+                            <p> Au piment d'Espelette et à la truffe noire</p>
+                        </div>
+                        <span class="card__price">23€</span>
+                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                    </article>
+                </div>
+            </section>
+
             <div class="menu_btn">
                 <button class="btn_commande">Commander</button>
             </div>
